# claude-with-the-anthropic-api

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
src/claude_with_the_anthropic_api/: main.py
tests/: test_main.py
