[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-with-the-anthropic-api"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
claude-with-the-anthropic-api = "claude_with_the_anthropic_api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_with_the_anthropic_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src"]
